--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="weatherDropdown">
                         <a class="dropdown-item" href="#" id="weatherBtn">Get Current Weather</a>
-                        <a class="dropdown-item" href="#" id="forecastBtn">7 Day Forecast</a>
+                        <a class="dropdown-item" href="#" id="forecastBtn">Seven Day Forecast</a>
                     </div>
                 </li>
             </ul>
